# qpager_draft

client/: Cargo.toml
client/src/: main.rs
qpager_lib/: Cargo.toml
qpager_lib/src/: lib.rs
server/: Cargo.toml
server/migrations/2022-06-11-114519_init/: down.sql  up.sql
server/src/db/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
