[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.2"
serde = "1.0.137"
serde_json = "1.0.81"
qpager_lib = {git = "https://github.com/AlexXx235/pager-lib.git"}
log = "0.4.17"
env_logger = "0.9.0"