[package]
name = "qpager_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
log = "0.4.17"
env_logger = "0.9.0"