[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.17.2"
serde_json = "1.0.81"
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
dotenv = "0.15.0"
bytes = "1.1.0"
qpager_lib = {path = "../qpager_lib"}
openssl = "0.10.40"
hex = "0.4.3"